# kappe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cookbook.md  LICENSE  MANIFEST.in  README.md  __main__.py  committed.toml  format_e2e_test.py  pyproject.toml
.github/workflows/: bump.yaml  pypi-publish.yaml  stale.yaml  workflow.yaml
kappe/: __main__.py  convert.py  kappe.py  plugin.py  settings.py
kappe/module/: pointcloud.py  tf.py  timing.py
kappe/plugins/: image.py
kappe/utils/: msg_def.py  pointcloud2.py  settings.py  types.py
src/kappe/: __init__.py  __main__.py  cli.py  convert.py  cut.py  kappe.py  plugin.py  reader.py  settings.py  writer.py
src/kappe/module/: pointcloud.py  qos.py  tf.py  timing.py
src/kappe/plugins/: camera_info.py  image.py  upgrade.py
src/kappe/utils/: __init__.py  error_handling.py  exceptions.py  json_to_mcap.py  logging.py  mcap_to_json.py  msg_def.py  pointcloud2.py  rotation.py  settings.py  types.py
test/: __init__.py  conftest.py  test_camera_info.py  test_cut_e2e.py  test_e2e.py  test_json_to_mcap.py  test_main.py  test_mcap_to_json.py  test_msg_def.py  test_plugin.py  test_qos.py  test_rotation.py  test_roundtrip.py  test_settings.py  test_tf.py  test_timing.py  test_types.py
test/cut_e2e/tf_tree_split/: tf_tree_split.input.jsonl  tf_tree_split.yaml
test/cut_e2e/tf_tree_split/tf_tree_split.expected/: first.jsonl  second.jsonl
test/cut_e2e/time_split/: time_split.input.jsonl  time_split.yaml
test/cut_e2e/time_split/time_split.expected/: beginning.jsonl  end.jsonl
test/cut_e2e/topic_split/: topic_split.input.jsonl  topic_split.yaml
test/cut_e2e/topic_split/topic_split.expected/: 00000.jsonl  00001.jsonl  00002.jsonl
test/e2e/: conftest.py  test_convert_e2e.py  test_cut_e2e.py
test/e2e/combined_operations/: multi_feature.expected.jsonl  multi_feature.input.jsonl  multi_feature.yaml
test/e2e/convert/combined_operations/: multi_feature.expected.jsonl  multi_feature.input.jsonl  multi_feature.yaml
test/e2e/convert/error_handling/: message_definition_lookup_failure.error.json  message_definition_lookup_failure.input.jsonl  message_definition_lookup_failure.yaml
test/e2e/convert/message_ordering/: message_ordering.expected.jsonl  message_ordering.input.jsonl  message_ordering.yaml
test/e2e/convert/pointcloud/: ego_bounds.expected.jsonl  ego_bounds.input.jsonl  ego_bounds.yaml  field_mapping.expected.jsonl  field_mapping.input.jsonl  field_mapping.yaml  pointcloud_wrong_schema.expected.jsonl  pointcloud_wrong_schema.input.jsonl  pointcloud_wrong_schema.yaml  remove_zero_points.expected.jsonl  remove_zero_points.input.jsonl  remove_zero_points.yaml  rotate_pointcloud.expected.jsonl  rotate_pointcloud.input.jsonl  rotate_pointcloud.yaml  rotate_quaternion.expected.jsonl  rotate_quaternion.yaml
test/e2e/convert/qos_handling/: ros1_latching.input.jsonl  ros1_latching.yaml
test/e2e/convert/schema_handling/: custom_schema_definition.input.jsonl  custom_schema_definition.yaml
test/e2e/convert/schema_mapping/: schema_mapping.expected.jsonl  schema_mapping.input.jsonl  schema_mapping.yaml
test/e2e/convert/simple_pass/: simple_pass.input.jsonl  simple_pass.yaml
test/e2e/convert/time_operations/: combined_all_operations.expected.jsonl  combined_all_operations.input.jsonl  combined_all_operations.yaml  default_topic_time_offset.input.jsonl  header_time_offset.input.jsonl  keep_all_static_tf.expected.jsonl  keep_all_static_tf.input.jsonl  mcap_time_updates.expected.jsonl  mcap_time_updates.input.jsonl  mcap_time_updates.yaml  pub_time.input.jsonl  pub_time_with_offset.expected.jsonl  pub_time_with_offset.input.jsonl  pub_time_with_offset.yaml  sec_nanosec_offset.expected.jsonl  sec_nanosec_offset.input.jsonl  update_mcap_time.input.jsonl  update_mcap_time.yaml
test/e2e/convert/topic_management/: frame_id_mapping.expected.jsonl  frame_id_mapping.input.jsonl  frame_id_mapping.yaml  multiple_removes.expected.jsonl  multiple_removes.input.jsonl  multiple_removes.yaml  topic_drop.expected.jsonl  topic_drop.input.jsonl  topic_drop.yaml  topic_remove.expected.jsonl  topic_remove.input.jsonl  topic_remove.yaml  (+6 more)
test/e2e/pointcloud/: ego_bounds.expected.jsonl  ego_bounds.input.jsonl  ego_bounds.yaml  field_mapping.expected.jsonl  field_mapping.input.jsonl  field_mapping.yaml  remove_zero_points.expected.jsonl  remove_zero_points.input.jsonl  remove_zero_points.yaml  rotate_pointcloud.expected.jsonl  rotate_pointcloud.input.jsonl  rotate_pointcloud.yaml  rotate_quaternion.expected.jsonl  rotate_quaternion.yaml
test/e2e/schema_mapping/: schema_mapping.expected.jsonl  schema_mapping.input.jsonl  schema_mapping.yaml
test/e2e/simple_pass/: simple_pass.expected.jsonl  simple_pass.input.jsonl  simple_pass.yaml
test/e2e/time_operations/: default_topic_time_offset.expected.jsonl  default_topic_time_offset.input.jsonl  default_topic_time_offset.yaml  header_time_offset.input.jsonl  header_time_offset.yaml  pub_time.expected.jsonl  pub_time.input.jsonl  pub_time.yaml  update_mcap_time.expected.jsonl  update_mcap_time.input.jsonl  update_mcap_time.yaml
test/e2e/topic_management/: frame_id_mapping.expected.jsonl  frame_id_mapping.input.jsonl  frame_id_mapping.yaml  multiple_removes.expected.jsonl  multiple_removes.input.jsonl  multiple_removes.yaml  topic_drop.expected.jsonl  topic_drop.input.jsonl  topic_drop.yaml  topic_remove.expected.jsonl  topic_remove.input.jsonl  topic_remove.yaml  topic_rename.expected.jsonl  topic_rename.input.jsonl  topic_rename.yaml
test/e2e/transforms/: multiple_tf_insert.expected.jsonl  multiple_tf_insert.input.jsonl  multiple_tf_insert.yaml  tf_dynamic_offset.yaml  tf_insert.expected.jsonl  tf_insert.yaml  tf_insert_rotation.expected.jsonl  tf_insert_rotation.input.jsonl  tf_insert_rotation.yaml  tf_offset_combined.expected.jsonl  tf_offset_combined.input.jsonl  tf_offset_translation.input.jsonl  tf_remove.expected.jsonl  tf_remove.input.jsonl  tf_remove.yaml  tf_remove_all.input.jsonl  tf_remove_all.yaml
test/e2e/trim/: trim.expected.jsonl  trim.input.jsonl  trim.yaml
(+109 files in other folders)
