[project]
name = "kappe"
authors = [{ name = "Marko Bausch" }]
description = "Kappe is an efficient data migration tool designed to seamlessly convert and split MCAP files."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
    "mcap>=1.0.2",
    "mcap-ros1-support>=0.6.0",
    "mcap-ros2-support>=0.3.0",
    "numpy",
    "pydantic>=2.4.2",
    "tqdm",
    "pyyaml>=6.0.1",
    "scipy>=1.11.1",
    "jsonargparse[signatures]>=4.35.0",
    "pointcloud2>=0.2.3",
    "pydantic-yaml>=1.2.1",
    "platformdirs>=4.3.8",
]

dynamic = ["version"]

[project.urls]
repository = "https://github.com/sensmore/kappe"

[project.scripts]
kappe = "kappe.cli:main"
mcap_to_json = "kappe.utils.mcap_to_json:main"
json_to_mcap = "kappe.utils.json_to_mcap:main"

[project.optional-dependencies]
plugin_image = ["pillow>=8.0.0"]

[dependency-groups]
test = ["pytest-cov>=6.2.1", "pytest>=8.4.1", "kappe[plugin_image]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/kappe/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

src = ['src']

target-version = 'py310'

[tool.ruff.lint]
exclude = ['msgs']
select = ['ALL']

ignore = [
    'ANN401',  # dynamically-typed-expression
    'C901',    # complex-structure
    'D',       # pydocstyle
    'EM101',   # raw-string-in-exception
    'EM102',   # f-string-in-exception
    'FIX002',  # TODO
    'PLR2004', # MagicValueComparisons
    'S101',    # AssertUsed
    'TD',      # TODO
    'TRY003',  # raise-vanilla-args

    # formater
    'COM812', # missing-trailing-comma
    'ISC001', # single-line-implicit-string-concatenation

    'UP038', # Deprecated rule
]

[tool.ruff.lint.per-file-ignores]
# Relaxed lints for test files
"test/**/*.py" = ["T201", "SLF001", "ANN201"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.format]
quote-style = "single"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "-vv"
